force-app/main/default/objects/custom_create131__c/custom_create131__c.object-meta.xml
<CustomObject>
    <label>Custom created object131</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects131</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>