force-app/main/default/objects/custom_create131__c/fields/custom_create_131field590__c.field-meta.xml
<CustomField>
    <fullName>custom_create_131field590__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 131field590</label>
    <type>Checkbox</type>
</CustomField>